force-app/main/default/objects/Appointment__c/Appointment__c.object-meta.xml
<CustomObject>
    <description>Stores a customer appointment: who it is for, when, its status, and the type of service. Central object for the Appointment Management Assistant.</description>
    <label>Appointment</label>
    <pluralLabel>Appointments</pluralLabel>
    <nameField>
        <label>Appointment Number</label>
        <type>AutoNumber</type>
        <displayFormat>APT-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>