force-app/main/default/objects/Appointment__c/listViews/All_Appointments.listView-meta.xml
<ListView>
    <fullName>All_Appointments</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Appointment_Date_Time__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Appointments</label>
</ListView>